fix vertical alignment of buttons

--- a/app/assets/stylesheets/forever_style_guide/globals/_effects.scss
+++ b/app/assets/stylesheets/forever_style_guide/globals/_effects.scss
@@ -85,6 +85,7 @@ $color-card-bg: color('white');
   padding: $padding-default-vertical $btn-padding-default-horizontal;
   line-height: 1.3;
   display: inline-block;
+  vertical-align: middle;
   text-align: center;
   font-size: $font-size-300;
   border: 0;
